[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/sprites/SpaceMono-BoldItalic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/sprites/roundedRectWhite.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/music-dial.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/sound-dial.png" type="Texture" id=4]
[ext_resource path="res://src/prefabs/ui/Settings.gd" type="Script" id=5]
[ext_resource path="res://src/prefabs/ui/SliderLine.tres" type="StyleBox" id=6]
[ext_resource path="res://assets/sounds/currentclickv3(1).wav" type="AudioStream" id=7]
[ext_resource path="res://src/prefabs/ui/Toggle.gd" type="Script" id=8]
[ext_resource path="res://assets/sprites/toggle1.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/toggle2.png" type="Texture" id=10]
[ext_resource path="res://assets/sounds/clickpopbubblev2.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/sprites/SpaceMono-Regular.ttf" type="DynamicFontData" id=12]

[sub_resource type="DynamicFont" id=8]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 20
font_data = ExtResource( 12 )

[node name="settings" type="Node2D"]
script = ExtResource( 5 )

[node name="BtnSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -10.0
bus = "Sound"

[node name="BG" type="NinePatchRect" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -216.0
margin_right = 152.0
margin_bottom = 216.0
rect_pivot_offset = Vector2( -8, -9 )
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 240, 240 )
patch_margin_left = 80
patch_margin_top = 80
patch_margin_right = 80
patch_margin_bottom = 80

[node name="CenterContainer" type="CenterContainer" parent="BG"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="BG/CenterContainer"]
margin_left = 36.0
margin_top = 38.0
margin_right = 268.0
margin_bottom = 394.0
alignment = 1

[node name="settings" type="Label" parent="BG/CenterContainer/VBoxContainer"]
margin_right = 232.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 8 )
text = "settings"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="BG/CenterContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 232.0
margin_bottom = 356.0
rect_min_size = Vector2( 0, 280 )

[node name="SoundSliderSnd" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0
bus = "Sound"

[node name="MusicSliderSnd" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0
bus = "Sound"

[node name="sound-slider" type="HSlider" parent="."]
margin_left = -112.0
margin_top = -79.0
margin_right = 188.0
margin_bottom = 17.0
rect_scale = Vector2( 0.75, 0.75 )
custom_icons/grabber_disabled = ExtResource( 4 )
custom_icons/grabber_highlight = ExtResource( 4 )
custom_icons/grabber = ExtResource( 4 )
custom_styles/slider = ExtResource( 6 )
custom_styles/grabber_area_highlight = ExtResource( 6 )
custom_styles/grabber_area = ExtResource( 6 )
max_value = 1.0
step = 0.05

[node name="music-slider" type="HSlider" parent="."]
margin_left = -112.0
margin_top = 21.0
margin_right = 188.0
margin_bottom = 117.0
rect_scale = Vector2( 0.75, 0.75 )
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 3 )
custom_styles/slider = ExtResource( 6 )
custom_styles/grabber_area_highlight = ExtResource( 6 )
custom_styles/grabber_area = ExtResource( 6 )
max_value = 1.0
step = 0.05

[node name="path-ghost-toggle" type="TextureButton" parent="."]
margin_left = -112.0
margin_top = 107.0
margin_right = -16.0
margin_bottom = 203.0
rect_scale = Vector2( 0.75, 0.75 )
texture_normal = ExtResource( 9 )
script = ExtResource( 8 )
toggledTex = ExtResource( 10 )
untoggledTex = ExtResource( 9 )

[node name="Label" type="Label" parent="."]
margin_left = -36.0
margin_top = 123.0
margin_right = 96.0
margin_bottom = 154.0
custom_fonts/font = SubResource( 9 )
text = "path ghosts"

[connection signal="value_changed" from="sound-slider" to="." method="onSoundSliderValueChanged"]
[connection signal="value_changed" from="music-slider" to="." method="onMusicSliderValueChanged"]
[connection signal="pressed" from="path-ghost-toggle" to="path-ghost-toggle" method="toggle"]
[connection signal="wasToggled" from="path-ghost-toggle" to="." method="_on_pathghosttoggle_wasToggled"]
